--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/chartjs": "^4.0.0",
     "@coreui/coreui": "^5.1.0",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.3.0",
@@ -23,6 +24,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
+    "simplebar-react": "^3.2.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "sass": "^1.77.8",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
