Dodanie listy i tabeli restauracji

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
       "@services/*": ["./services/*"],
       "@components/*": ["./components/*"],
       "@views/*": ["./views/*"],
+      "@interfaces/*": ["./interfaces/*"]
     }
-  }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
