Refactor i restaurant form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "@components/*": ["./components/*"],
       "@views/*": ["./views/*"],
       "@interfaces/*": ["./interfaces/*"]
-    }
+    },
+    "moduleResolution": "NodeNext",
   },
   "include": [
     "src/**/*"
